--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "Prefix": "G",
-    "Devs": "342040918150610955"
+    "prefix": "G",
+    "devs": "342040918150610955",
+    "owner": "222227960025972746"
 }
