--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "prefix": "G",
-    "devs": "342040918150610955",
-    "owner": "222227960025972746"
+  "prefix": "g",
+  "owner": "222227960025972746",
+  "devs": "342040918150610955",
+  "roleMod": "808297437231579147"
 }
