--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "G6",
-    "version": "1.0.0",
-    "description": "A special robot for the GODZILLA server",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "discord.js": "^12.5.1",
-        "discord.js-commando": "git+https://github.com/discordjs/commando.git",
-        "fs": "0.0.1-security",
-        "ms": "^2.1.3"
-    }
+  "name": "G6",
+  "version": "3.0.0",
+  "description": "A special robot for the GBOY server",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "discord.js": "^12.5.3",
+    "fs": "0.0.1-security",
+    "ms": "^2.1.3",
+    "path": "^0.12.7"
+  }
 }
