--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "A special robot for the GBOY server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "fs": "0.0.1-security",
     "ms": "^2.1.3",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
