--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "G6",
-  "version": "3.0.0",
+  "name": "g6",
+  "version": "4.0.0",
   "description": "A special robot for the GBOY server",
   "main": "index.js",
   "scripts": {
@@ -8,15 +8,16 @@
     "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "3bood_k",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "discord.js": "^12.5.3",
+    "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
     "fs": "0.0.1-security",
     "ms": "^2.1.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "wokcommands": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
